<resources>
    <string name="app_name">浣客洗衣</string>

    <!-- Activity -->
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_frame">FrameActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_user_regulate">UserRegulateActivity</string>
    <string name="title_activity_com_problem">ComProblemActivity</string>
    <string name="title_activity_awash">AWashActivity</string>
    <string name="title_activity_service_scope">ServiceScopeActivity</string>
    <string name="title_activity_about_us">AboutUsActivity</string>
    <string name="title_activity_share_code">ShareCodeActivity</string>
    <string name="title_activity_service_note">ServiceNoteActivity</string>
    <string name="title_activity_pay">PayActivity</string>
    <string name="title_activity_feek_back">FeekBackActivity</string>
    <string name="title_activity_about_app">AboutAppActivity</string>
    <string name="title_activity_user_info">UserInfoActivity</string>
    <string name="title_activity_my_addr">MyAddrActivity</string>

    <!-- 标题 -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="homefragment">homeFragment</string>
    <string name="basketfragment">basketfragment</string>
    <string name="contact_customer">联系客服</string>
    <string name="com_problem">常见问题</string>
    <string name="service_scope">服务范围</string>
    <string name="about_us">关于我们</string>
    <string name="a_wash">件洗</string>
    <string name="user_agree">用户协议</string>
    <string name="feedback">意见反馈</string>
    <string name="pop_tip_title">提示信息</string>
    <string name="pop_tip_content">请输入正确手机号码</string>
    <string name="phone_null">请输入手机号码</string>
    <string name="pass_null">请输入验证码</string>
    <string name="name_null">请输入姓名</string>
    <string name="area_null">请输入区名</string>
    <string name="commu_null">请输入小区名</string>
    <string name="detail_addr_null">请输入详细地址名</string>
    <string name="pass_error">请重新输入正确验证码</string>
    <string name="pop_tip_content2">功能尚未开通，敬请期待</string>
    <string name="coupon_share_title">优惠码分享</string>

    <!--衣服类型 -->
    <string name="text_bag_wash">袋洗</string>

    <!-- 描述 -->
    <string name="title">标题</string>
    <string name="city">成都</string>
    <string name="text_delete_order">删除订单</string>
    <string name="text_register">注册</string>
    <string name="text_backout">注销</string>
    <string name="title_login">绑定手机登录</string>
    <string name="title_user_regulate">用户协议</string>
    <string name="title_com_problem">常见问题</string>
    <string name="title_service_note">服务说明</string>
    <string name="title_feek_back">意见反馈</string>
    <string name="title_about_us">关于我们</string>
    <string name="title_about_app">关于浣洗</string>
    <string name="title_register">注册</string>
    <string name="title_user_info">用户信息</string>
    <string name="title_pay">支付</string>
    <string name="title_my_addr">我的地址</string>
    <string name="phone_input">请输入手机号码</string>
    <string name="code_get">获取验证码</string>
    <string name="code_input">请输入验证码</string>
    <string name="login_bind">绑定手机登陆</string>
    <string name="register_login">注册并登陆</string>
    <string name="text_description">点击“绑定手机登陆”，即表示同意</string>
    <string name="text_pattern">《快快洗用户模式》</string>
    <string name="text_refresh">重新获取</string>
    <string name="main_navigation_home">主页</string>
    <string name="main_navigation_basket">洗衣篮</string>
    <string name="main_navigation_my">我</string>
    <string name="main_navigation_more">更多</string>
    <string name="a_wash_tab_spring">春/秋装</string>
    <string name="a_wash_tab_summer">夏装</string>
    <string name="a_wash_tab_winter">冬装</string>
    <string name="a_wash_tab_leather">皮衣</string>
    <string name="msg_repress">再按一次退出程序</string>
    <string name="text_tshirt">T恤</string>
    <string name="x">X</string>
    <string name="rnb">¥00</string>
    <string name="price_abag">¥99</string>
    <string name="the_cost">费用总计:</string>
    <string name="last_cost">总计</string>
    <string name="user_info">用户信息</string>
    <string name="write_info">填写</string>
    <string name="one">1</string>
    <string name="text_phone">13751338740</string>
    <string name="text_name">小冠</string>
    <string name="text_addr">成都</string>
    <string name="text_coupons_code">优惠码</string>
    <string name="text_recom_code">推荐码:</string>
    <string name="recom_code">SI9J6Q</string>
    <string name="text_last_coupon">余0张优惠券</string>
    <string name="text_gird">文字</string>
    <string name="grid_myorder">我的订单</string>
    <string name="grid_washcoin">洗衣币</string>
    <string name="grid_myads">我的地址</string>
    <string name="grid_share">分享推荐码</string>
    <string name="grid_rcmcode">验证推荐码</string>
    <string name="unit_bag">/袋</string>
    <string name="text_dsb">装多少，洗多少！</string>
    <string name="text_dsbs">亲,皮衣真丝内衣、袜子、鞋不要装喔!</string>
    <string name="text_loading">加载中…</string>
    <string name="msg_loading_error">加载失败</string>
    <string name="msg_con_server_error">连接服务器出错</string>
    <string name="text_get_coupons">获得优惠洗衣</string>
    <string name="text_describe">\u3000\u3000\u3000向朋友分享洗衣优惠码，朋友在该\u3000\u3000\u3000</string>
    <string name="text_describes">平台首次使用你的优惠码消费后，您也将获得相应金额的洗衣券。</string>
    <string name="title_share">用浣客洗衣，首单免费送</string>
    <string name="content_share">[浣客洗衣]上门服务，分享好友，好礼无限，我的推荐码是：</string>
    <string name="text_added_basket">已加入洗衣篮</string>
    <string name="text_balance_pay">余额支付</string>
    <string name="text_alipay">支付宝支付</string>
    <string name="balance_amount">000.00</string>
    <string name="to_up">充值</string>
    <string name="text_in_pay_pass">请输入支付密码</string>
    <string name="ok_pay">确认支付</string>
    <string name="reset_pay_pass">重置支付密码</string>
    <string name="text_des_balance">快快洗余额（元）</string>
    <string name="button_num">0</string>
    <string name="button_delete">删除</string>
    <string name="text_input_tips">请输入您的宝贵意见. . . .</string>
    <string name="btn_submit">提交</string>
    <string name="text_website">官网:</string>
    <string name="website">www.huankxy.com</string>
    <string name="text_weixin">微信: 浣客洗衣</string>
    <string name="btn_save">保存</string>
    <string name="text_modify">修改</string>
    <string name="name_input">请输入姓氏</string>
    <string name="btn_man">先生</string>
    <string name="btn_woman">女士</string>
    <string name="ship_address">收货地址</string>
    <string name="area">区</string>
    <string name="community">小区</string>
    <string name="detail_addr">详细地址</string>
    <string name="input_tips">请精准填写您所在的街道、小区、栋、单元、号</string>

</resources>
