<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_grey">

    <android.support.v4.view.ViewPager
        android:id="@+id/frag_vpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <RadioGroup
        android:id="@+id/main_tab_group"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/DIMEN_100PX"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/main_tab_home"
            style="@style/main_tab_bottom"
            android:checked="true"
            android:drawableTop="@drawable/bg_tab_home"
            android:text="@string/main_navigation_home"
            android:textColor="@color/main_blue" />

        <RadioButton
            android:id="@+id/main_tab_basket"
            style="@style/main_tab_bottom"
            android:drawableTop="@drawable/bg_tab_basket"
            android:text="@string/main_navigation_basket" />

        <RadioButton
            android:id="@+id/main_tab_my"
            style="@style/main_tab_bottom"
            android:drawableTop="@drawable/bg_tab_my"
            android:text="@string/main_navigation_my" />

        <RadioButton
            android:id="@+id/main_tab_more"
            style="@style/main_tab_bottom"
            android:drawableTop="@drawable/bg_tab_more"
            android:text="@string/main_navigation_more" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/rlyt_dot"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/DIMEN_84PX"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/iv_have1"
            android:layout_width="@dimen/DIMEN_0PX"
            android:layout_height="@dimen/DIMEN_1PX"
            android:layout_weight="1"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/iv_have"
            android:layout_width="@dimen/DIMEN_0PX"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/DIMEN_30PX"
            android:src="@mipmap/ic_tab_top_h"
            android:visibility="visible" />

        <TextView
            android:id="@+id/iv_have3"
            android:layout_width="@dimen/DIMEN_0PX"
            android:layout_height="@dimen/DIMEN_1PX"
            android:layout_weight="1"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/iv_have4"
            android:layout_width="@dimen/DIMEN_0PX"
            android:layout_height="@dimen/DIMEN_1PX"
            android:layout_weight="1"
            android:visibility="invisible" />
    </LinearLayout>
</RelativeLayout>